updating job spec

--- a/pre-post-sync/post-sync-job.yaml
+++ b/pre-post-sync/post-sync-job.yaml
@@ -12,5 +12,6 @@ spec:
       - name: sleep
         image: alpine:latest
         command: ["sleep", "10"]
+        imagePullPolicy: Never
       restartPolicy: Never
   backoffLimit: 0
