updating job spec

--- a/sync-waves/manifests.yaml
+++ b/sync-waves/manifests.yaml
@@ -11,6 +11,7 @@ spec:
       containers:
         - name: upgrade-sql-schema
           image: alpine:latest
+          imagePullPolicy: Never
           command: ["sleep", "5"]
       restartPolicy: Never
 ---
