fixing image policy

--- a/sync-waves/manifests.yaml
+++ b/sync-waves/manifests.yaml
@@ -32,6 +32,7 @@ spec:
       containers:
         - name: main
           image: nginx:latest
+          imagePullPolicy: Never
 ---
 apiVersion: v1
 kind: Service
